infra/kubernetes/appointment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: hospital-core-appointment-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
